fix styles
- fix mobile responsive display
- hide horizontal scrolling
- make footer stick to bottom

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -11,10 +11,13 @@ html,
 body {
   height: 100%;
   font-family: Open Sans;
+  overflow-x: hidden;
 }
 
 main {
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   min-height: 100%;
 }
 
@@ -24,7 +27,7 @@ main {
   padding: 0 15px;
 }
 
-.nav_wrapper {
+.nav_content {
   display: flex;
   max-width: 1000px;
   margin: 0 auto;
@@ -54,9 +57,10 @@ main {
 }
 
 section {
+  width: 100%;
   max-width: 1000px;
   margin: 40px auto;
-  padding: 0 15px 90px;
+  padding: 0 15px;
 
   @media (min-width: 1000px) {
     padding: 0;
@@ -65,6 +69,7 @@ section {
 
 section h1 {
   margin: 10px 0px;
+
 
   @media (min-width: 768px) {
     padding: 0;
@@ -119,7 +124,15 @@ label {
   font-weight: 500;
 }
 
-button {
+.swapButton {
+  background: none;
+  border: none;
+  width: fit-content;
+}
+
+
+
+.convertButton {
   padding: 15px 10px;
   margin: 10px 0px;
   border-radius: 5px;
@@ -128,21 +141,28 @@ button {
   color: white;
 }
 
-button:active {
+.convertButton:active {
   background-color: #50b6fb;
 }
 
+.output p {
+  font-weight: bold;
+  margin: 10px 10px;
+  font-size: 60px;
+}
+
 footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #333;
   color: white;
-  position: absolute;
-  left: 0;
-  bottom: 0;
   width: 100%;
   height: 50px;
 }
 
 footer p {
-  padding: 16px 10px;
+  width: 100%;
+  padding: 10px;
   text-align: center;
 }
